# pypockethome

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yaml
src/pypockethome/: __init__.py  _connection.py  packet.py
tools/hello/: __main__.py
tools/proxy/: __main__.py
