[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "pypockethome"
dynamic = ["version"]
description = 'Python library for interfacing with the PocketHome system of climate control devices'
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
keywords = []
authors = [
  { name = "Raqbit", email = "raqbit@outlook.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/Raqbit/pypockethome#readme"
Issues = "https://github.com/Raqbit/pypockethome/issues"
Source = "https://github.com/Raqbit/pypockethome"

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
  "/.idea",
  "/.vscode",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pypockethome"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/pypockethome tests}"

[tool.coverage.run]
source_pkgs = ["pypockethome", "tests"]
branch = true
parallel = true
omit = [
  "src/pypockethome/__about__.py",
]

[tool.coverage.paths]
pypockethome = ["src/pypockethome"]
tests = ["tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.uv]
dev-dependencies = [
    "mypy>=1.13.0",
]
